# boardroom-telegram-bot

./: .coveragerc  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  Readme.md  celerybeat-schedule.db  docker-compose.yml  pyproject.toml  requirements.txt  run_polling.py
.github/workflows/: main.yml
bot/: models.py  tasks.py  tests.py  urls.py  utils.py  views.py
bot/handlers/: boardroom_api_client.py  bot.py  button_dispatcher.py  button_handlers.py  commands.py  dispatcher.py  static_text.py  utils.py
bot/migrations/: 0001_initial.py  0002_proposal.py
bothandler/: apps.py  models.py  tasks.py  views.py
bothandler/bot/: api_handler.py  bot.py  bot_commands.py
bothandler/migrations/: 0001_initial.py  0002_botchatuser.py  0003_proposalvotesibscribe.py  0004_auto_20210905_0517.py
conf/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tmp/: todos.txt
